--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ img {
     width: 100%;
     background-image: linear-gradient (black);
     background-position: center;
+    background-size: cover;
 
 }
 
